--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,33 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# IntelliJ IDEA
+.idea/
+*.iws
+*.iml
+*.ipr
+
+# User-specific files
+*.swp
+*.swo
+*.swn
+
+# Gradle or Maven build directories
+/build/
+out/
+target/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.bak
+*.orig
+*.rej
+
+# JetBrains IDEs
+*.idea_modules/
+*.idea/workspace.xml
